--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "react": "^18.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.0.0",
+    "react-export-table-to-excel": "^1.0.3",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
