--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "v18.3.0",
+    "npm": "8.11.0"
   }
 }
